# mmmusic

./: .gitignore  album.py  albums.py  ankous_last_stand.py  app.py  app_config.py  artist.py  artist_connections_map.ipynb  artist_finder.py  artist_finder_alt.py  artist_finder_graph.py  artist_finder_graph_alt.py  artist_finder_graph_new.py  artist_finder_new.py  artist_finder_server.py  artist_finder_server_client.py  artist_ids.py  artist_info.py  artist_server.py  artist_server_client.py  artists.py  base_class.py  built_to_spill.py  cache.py  connect_artists.py  create_playlists.py  everynoise_scraper.py  genre_graph.py  genre_positions.json  genres.py  get_sputnik_ratings.py  get_top_albums_for_genre.py  make_play.py  manage_q_playlists.py  manage_q_playlists_v2.py  mtmg.py  order.py  playlist.py  playlist_utils.py  playlists.py  (+15 more)
.github/workflows/: connect_artists.yml  lint.yml  manage_q_playlists.yml  rebuild_playlists.yml  run_unit_tests.yml
lib/: caching.py  features.py  filter.py  filters.py  genre_positions.py  genres.py  logging.py  metrics.py  music_theory.py  playlist.py  playlist_management.py  playlist_utils.py  playlists.py  shuffling.py  track_sources.py  types.py  user.py  users.py  utils.py
lib/data/: playlist_configs.py  playlist_ids.py
lib/models/: album.py  albums.py  artist.py  artists.py  genre_attributes.py  playlist_configs.py  spotify.py  sputnik.py  track.py  tracks.py  types.py
lib/playlists/: __init__.py  generated_playlists.py  management.py
mmmusic/: app.py  app_config.py  artist_finder.py  artist_finder_server.py  artist_finder_server_client.py  artist_server.py  artist_server_client.py  features.py  filters.py  genres.py  log_utils.py  logging.py  playlists.py  processors.py  q_management.py  ratings.py  shuffling.py  track_sources.py  users.py  utils.py
mmmusic/data/: genre_positions.json  playlist_configs.py
mmmusic/models/: albums.py  artists.py  genre_attributes.py  operations.py  playlist_configs.py  tracks.py  types.py
music_tools/: album.py  artist.py  base_class.py  genre_positions.json  genre_positions.py  genres.py  playlist.py  playlist_utils.py  shuffling.py  track.py  user.py  utils.py
scripts/: connect_artists.py  create_playlists.py  get_sputnik_ratings.py  get_top_albums_for_genre.py  list_playlist_descriptions.py  manage_q_playlists.py
templates/: finder_page.html  loading_page.html  login_page.html  shuffle_page.html
tests/: test_external_spotify.py  test_lib_external_spotify.py  test_lib_models_artist.py  test_lib_models_track.py  test_models_albums.py  test_models_artists.py  test_models_operations.py  test_models_tracks.py
(+11 files in other folders)
