[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mmmusic"
version = "0.1.0"
description = "Tools for music discovery and managment"
authors = ["Mason Albright <14malbright@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

beautifulsoup4 = "*"
cssutils = "*"
matplotlib = "*"
networkx = "*"
numpy = "*"
pandas = "*"
pydantic = "*"
requests = "*"
scipy = "*"
spotipy = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"

types-requests = "*"
types-tabulate = "*"
