[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mmmusic"
version = "0.1.3"
description = "Tools for music discovery and managment"
authors = ["Mason Albright <14malbright@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

beautifulsoup4 = "*"
cssutils = "*"
matplotlib = "*"
networkx = "*"
numpy = "*"
pandas = "*"
pydantic = "*"
requests = "*"
scipy = "*"
spotipy = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
pydeps = "^1.12.19"
ruff = "*"
types-requests = "*"
types-tabulate = "*"
ipython = "^8.30.0"

[tool.ruff.lint]
select = [
    # defaults
    "E4",
    "E7",
    "E9",
    "F",
    # isort
    "I",
    # extras
    "W",
    "E1",
    "N",
    "UP",
    "B",
    "C4",
    "ISC",
    "ICN",
    "T20",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.pydeps]
cluster = true
max_bacon = 2
max_cluster_size = 1000
rankdir = "BT"
reverse = true
